--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-jwt": "^8.4.1",
     "graphql": "^15.8.0",
     "graphql-scalars": "^1.22.4",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5"
   }
 }
