--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^15.8.0",
     "graphql-scalars": "^1.22.4",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2"
   }
 }
