--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,4 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@now/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "src/index.js"
-      },
-      {
-        "src": "/graphql",
-        "dest": "src/index.js"
-      }
-    ]
-  }
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" },
+               { "source": "/graphql", "destination": "/api" }]
+}
